--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
   flutter:
@@ -20,39 +20,41 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  intro_slider: ^3.0.2
-  firebase_core: ^1.10.5
-  firebase_auth: ^3.3.3
-  cloud_firestore: ^3.1.10
-  firebase_storage: ^10.2.9
-  image_picker: ^0.8.4+10
-  sqflite: ^2.0.0+4
-  pin_code_fields: ^7.3.0
+  cupertino_icons: 
+
+  intro_slider:
+  firebase_core: 
+  firebase_auth: 
+  cloud_firestore: 
+  firebase_storage: 
+  image_picker:
+  sqflite:
+  pin_code_fields:
 
 #  json_annotation: ^4.1.0
 
-  launch_review: ^3.0.1
+  # launch_review: 
 
-  url_launcher: ^6.0.12
-  html_unescape: ^2.0.0
+  url_launcher: 
+  html_unescape: 
     #  flick_video_player: ^0.3.1
 
-  flutter_html: ^2.1.5
+  flutter_widget_from_html_core:
 
 # flutter_statusbarcolor_ns
 
 
-  country_code_picker: ^2.0.2
+  country_code_picker:
 #  flutter_html: ^2.1.2
 
-  flutter_email_sender: ^5.0.2
+  flutter_email_sender: 
 #  video_player: ^2.2.5
 #  html: ^0.15.0
-  fluttertoast: ^8.0.8
-  flutter_material_pickers: ^3.1.2
+  fluttertoast:
+  flutter_material_pickers:
 
 
-  percent_indicator: ^4.2.2
+  percent_indicator:
 
 
 
@@ -60,25 +62,26 @@ dependencies:
 
 
   #  auto_size_text: ^3.0.0-nullsafety.0
-  flutter_local_notifications: ^9.5.3+1
+  flutter_local_notifications: ^16.3.3
 #  android_alarm_manager: ^0.4.5+17
   share: ^2.0.4
-  pin_input_text_field: ^4.1.1
+  pin_input_text_field: ^4.5.1
 #  feedback:  ^2.0.0
-  rate_my_app: ^1.1.1
+  rate_my_app: ^2.0.0
   rxdart: ^0.27.2
 #  timezone: ^0.7.0
-  carousel_slider: ^4.0.0
+  carousel_slider: ^4.2.1
 
-  timezone: ^0.8.0
-  numberpicker: ^2.1.1
-  shared_preferences: ^2.0.7
-  flutter_native_timezone: ^2.0.0
-  youtube_player_flutter: ^8.0.0
-
-
+  timezone: ^0.9.3
+  numberpicker: ^2.1.2
+  shared_preferences: ^2.2.2
+  flutter_timezone: ^1.0.8
+  youtube_player_flutter: ^8.1.2
 
 
+
+dependency_overrides:
+  file: ^6.1.3
 
 
 dev_dependencies:
@@ -141,5 +144,5 @@ flutter:
 
 
 
-flutter_intl:
-  enabled: true
+# flutter_intl:
+#   enabled: true
